update users service
